--- a/coreBiz/src/main/res/values/strings.xml
+++ b/coreBiz/src/main/res/values/strings.xml
@@ -1,2 +1,12 @@
 <resources>
+
+    <string name="core_biz_title_activity_login">登录</string>
+    <string name="core_biz_title_login_tip">请使用WanAndroid账号登录！</string>
+    <string name="core_biz_prompt_name">用户名</string>
+    <string name="core_biz_prompt_email">邮箱</string>
+    <string name="core_biz_prompt_password">密码</string>
+    <string name="core_biz_action_sign_in">登录</string>
+    <string name="core_biz_action_go_sign_in">去登录</string>
+    <string name="core_biz_welcome">"欢迎"</string>
+    <string name="core_biz_login_failed">"登录失败"</string>
 </resources>
