feat:注册功能和注册页面

--- a/coreBiz/src/main/res/values/strings.xml
+++ b/coreBiz/src/main/res/values/strings.xml
@@ -7,6 +7,11 @@
     <string name="core_biz_prompt_password">密码</string>
     <string name="core_biz_action_sign_in">登录</string>
     <string name="core_biz_action_go_sign_in">去登录</string>
+    <string name="core_biz_action_register">注册</string>
+    <string name="core_biz_action_go_register">去注册</string>
+    <string name="core_biz_title_register_tip">注册WanAndroid账号！</string>
+    <string name="core_biz_prompt_password_again">再输入一次密码</string>
     <string name="core_biz_welcome">"欢迎"</string>
     <string name="core_biz_login_failed">"登录失败"</string>
+    <string name="core_biz_register_failed">"注册失败"</string>
 </resources>
