--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,7 +5,8 @@
     <string name="title_notifications">Notifications</string>
     <string name="my_collect">我的收藏</string>
     <string name="my_share">我的分享</string>
-    <string name="setting">系统设置</string>
+    <string name="settings">系统设置</string>
     <string name="about">关于我们</string>
     <string name="copyright">版权声明</string>
+    <string name="logout">退出登录</string>
 </resources>
