feat:增加退出登录的功能

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,7 +7,6 @@
     <string name="my_share">我的分享</string>
     <string name="settings">系统设置</string>
     <string name="about_us">关于我们</string>
-    <string name="logout">退出登录</string>
     <string name="official_website">官方网站</string>
     <string name="official_website_url">https://wanandroid.com</string>
     <string name="source_code">源代码</string>
@@ -16,6 +15,7 @@
     <string name="copyright_summary">仅作个人及非商业用途</string>
     <string name="copyright_detail">此App所使用的接口服务器为玩Android网站提供，仅供学习交流，禁止用于任何商业用途。</string>
     <string name="sure">确定</string>
+    <string name="cancel">取消</string>
     <string name="version_name">Version %1$s</string>
 
 </resources>
