--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -17,5 +17,6 @@
     <string name="sure">确定</string>
     <string name="cancel">取消</string>
     <string name="version_name">Version %1$s</string>
+    <string name="search">搜索</string>
 
 </resources>
